--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "up": "taze major -I"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.11",
     "@vueuse/core": "^9.2.0",
     "@vueuse/head": "^0.7.11",
     "flowbite": "^1.5.3",
