--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.11",
+    "@tonaljs/tonal": "^4.6.5",
     "@vueuse/core": "^9.2.0",
     "@vueuse/head": "^0.7.11",
     "flowbite": "^1.5.3",
