--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "markdown-it-shiki": "^0.5.1",
     "pnpm": "^7.11.0",
     "postcss": "^8.4.16",
+    "sass": "^1.55.0",
     "shiki": "^0.10.1",
     "tailwindcss": "^3.1.8",
     "taze": "^0.7.6",
