--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue": "^3.2.39",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
