--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5",
-    "vue3-popper": "^1.5.0"
+    "vue3-popper": "^1.5.0",
+    "webmidi": "^3.0.21"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
