--- a/package.json
+++ b/package.json
@@ -12,59 +12,60 @@
     "test:e2e": "cypress open",
     "test:unit": "vitest",
     "typecheck": "vue-tsc --noEmit",
-    "up": "taze major -I"
+    "up": "taze major -I",
+    "up:major": "taze major"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.0.13",
-    "@tonaljs/tonal": "^4.8.0",
-    "@vueuse/core": "^9.6.0",
-    "@vueuse/head": "^0.7.13",
+    "@heroicons/vue": "^2.0.14",
+    "@tonaljs/tonal": "^4.10.0",
+    "@vueuse/core": "^9.12.0",
+    "@vueuse/head": "^1.0.23",
     "animate.css": "^4.1.1",
-    "flowbite": "^1.5.4",
+    "flowbite": "^1.6.3",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.27",
+    "pinia": "^2.0.29",
     "tone": "^14.7.77",
     "vue": "^3.2.45",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "vue3-popper": "^1.5.0",
-    "webmidi": "^3.0.22"
+    "webmidi": "^3.1.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.2",
-    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@antfu/eslint-config": "^0.35.1",
+    "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/test-utils": "^2.2.4",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/test-utils": "^2.2.8",
     "autoprefixer": "^10.4.13",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "cypress": "^10.11.0",
-    "eslint": "^8.28.0",
+    "cypress": "^12.4.1",
+    "eslint": "^8.33.0",
     "eslint-plugin-cypress": "^2.12.1",
     "https-localhost": "^4.7.1",
     "markdown-it-link-attributes": "^4.0.1",
-    "markdown-it-shiki": "^0.5.1",
-    "pnpm": "^7.17.1",
-    "postcss": "^8.4.19",
-    "sass": "^1.56.1",
-    "shiki": "^0.10.1",
+    "markdown-it-shiki": "^0.7.2",
+    "pnpm": "^7.26.2",
+    "postcss": "^8.4.21",
+    "sass": "^1.57.1",
+    "shiki": "^0.13.0",
     "tailwindcss": "^3.2.4",
-    "taze": "^0.7.6",
-    "typescript": "^4.9.3",
-    "unplugin-auto-import": "^0.11.5",
-    "unplugin-vue-components": "^0.22.11",
-    "vite": "^3.2.4",
-    "vite-plugin-inspect": "^0.6.1",
-    "vite-plugin-pages": "^0.25.0",
-    "vite-plugin-pwa": "^0.12.8",
+    "taze": "^0.8.5",
+    "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.13.0",
+    "unplugin-vue-components": "^0.23.0",
+    "vite": "^4.0.4",
+    "vite-plugin-inspect": "^0.7.15",
+    "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-pwa": "^0.14.1",
     "vite-plugin-vue-layouts": "^0.7.0",
-    "vite-plugin-vue-markdown": "^0.21.1",
-    "vite-ssg": "^0.20.2",
-    "vite-ssg-sitemap": "^0.3.2",
-    "vitest": "^0.21.1",
-    "vue-tsc": "^1.0.10"
+    "vite-plugin-vue-markdown": "^0.22.2",
+    "vite-ssg": "^0.22.1",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.28.3",
+    "vue-tsc": "^1.0.24"
   }
 }
