--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,12 @@
   for = "/manifest.webmanifest"
   [headers.values]
     Content-Type = "application/manifest+json"
+
+[dev]
+  command = "pnpm run dev" # Command to start your dev server
+  targetPort = 3333 # The port for your application server, framework or site generator
+  port = 8888 # The port that the netlify dev will be accessible on
+  publish = "dist" # The path to your static content folder
+  autoLaunch = true # a Boolean value that determines if Netlify Dev launches the local server address in your browser
+  envFiles = [".env"] # The env files to use, ordered by priority (left - highest, right - lowest)
+  # to start an https server instead of an http one, configure a certificate and key files
