--- a/package.json
+++ b/package.json
@@ -16,18 +16,25 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
+    "@supabase/supabase-js": "^2.7.0",
     "@tonaljs/tonal": "^4.8.0",
     "@vueuse/core": "^9.6.0",
     "@vueuse/head": "^0.7.13",
     "animate.css": "^4.1.1",
+    "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.5.4",
+    "lodash.clonedeep": "^4.5.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.27",
+    "spotify-api.js": "^9.2.5",
     "tone": "^14.7.77",
     "vue": "^3.2.45",
+    "vue-audio-visual": "^3.0.3",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
+    "vue3-lottie": "^2.5.0",
     "vue3-popper": "^1.5.0",
     "webmidi": "^3.0.22"
   },
